only make letter green if it's the same row, fix b != g

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -97,7 +97,7 @@
                                 <div class="keyboard-letter V">V</div>
                             </div>
                             <div class="keyboard-button">
-                                <div class="keyboard-letter G">B</div>
+                                <div class="keyboard-letter B">B</div>
                             </div>
                             <div class="keyboard-button">
                                 <div class="keyboard-letter N">N</div>
