--- a/404.html
+++ b/404.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Home</title>
+        <title>404: Not Found</title>
 
         <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/404.js"></script>
 
         <link href="css/style.css" rel="stylesheet">
         <link href="css/navbar.css" rel="stylesheet">
+        <link href="css/404.css" rel="stylesheet">
     </head>
 
     <body>
@@ -28,6 +30,12 @@
             </div>
         </div>
         
+        <div class="container">
+            <div id="error-container">
+                <img class="error-image" src="images/FeelsDankMan.png">
+                <p class="error-text">Page not found</p>
+            </div>
+        </div>
     </body>
 
     <script>
