--- a/404.html
+++ b/404.html
@@ -3,12 +3,12 @@
     <head>
         <title>404: Not Found</title>
 
-        <script type="text/javascript" src="js/jquery.js"></script>
-        <script type="text/javascript" src="js/404.js"></script>
+        <script type="text/javascript" src="/js/jquery.js"></script>
+        <script type="text/javascript" src="/js/404.js"></script>
 
-        <link href="css/style.css" rel="stylesheet">
-        <link href="css/navbar.css" rel="stylesheet">
-        <link href="css/404.css" rel="stylesheet">
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="/css/navbar.css" rel="stylesheet">
+        <link href="/css/404.css" rel="stylesheet">
     </head>
 
     <body>
@@ -24,7 +24,7 @@
                 </div>
                 <div class="navbar-buttons-right">
                     <div class="navbar-button" id="navbar-button-login">
-                        <a class="navbar-button-anchor" href="/"><img class="navbar-button-img" src="images/twitchlogo.png"><span>Log In</span></a>
+                        <a class="navbar-button-anchor" href="/"><img class="navbar-button-img" src="/images/twitchlogo.png"><span>Log In</span></a>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
         
         <div class="container">
             <div id="error-container">
-                <img class="error-image" src="images/FeelsDankMan.png">
+                <img class="error-image" src="/images/FeelsDankMan.png">
                 <p class="error-text">Page not found</p>
             </div>
         </div>
