feat(commands): indicator for selected command

--- a/commands.html
+++ b/commands.html
@@ -45,13 +45,12 @@
                 </div>
                 <div class="command-bottom">
                     <div class="command-commands-container">
-                        <div class="" style="overflow-y:scroll; height: 100%;">
-                            <div class="scroll-shadow-top"></div>
-                                <div class="command-commands-margin">
+                        <div class="scroll-shadow-top"></div>
 
-                                </div>
-                            <div class="scroll-shadow-bottom"></div>
+                        <div class="command-commands-buttons-container">
                         </div>
+                        
+                        <div class="scroll-shadow-bottom"></div>
                     </div>
                     <div class="command-help-container">
                         <div class="command-info-container command-box-container scrollbox-dark">
@@ -101,8 +100,4 @@
             </div>
         </div>
     </body>
-
-    <script>
-        
-    </script>
 </html>
