feat(commands): handle invalid commands

--- a/commands.html
+++ b/commands.html
@@ -61,7 +61,7 @@
                                 <h4 class="command-header">Usage guide</h4>
 
 
-                                <div id="command-usage-guide"></div>
+                                <div id="command-usage-guide">-</div>
                                 
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                                 <div id="command-attribute-flags">
                                     <h4 class="command-header">Flags</h4>
                                     <div class="command-attribute-flags-container"></div>
-                                    <p class="command-text"></p>
+                                    <p class="command-text">-</p>
                                 </div>
                             </div>
                         </div>
